--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.3.3",
-    "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.9"
+    "autoprefixer": "^9",
+    "postcss": "^7",
+    "tailwindcss": "yarn:@tailwindcss/postcss7-compat"
   }
 }
