--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
-    "@reduxjs/toolkit": "^1.5.1",
+    "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,10 +13,16 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/react-responsive": "^8.0.3",
+    "babel-plugin-macros": "^3.1.0",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
+    "react-responsive": "^9.0.0-beta.3",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
+    "twin.macro": "^2.7.0",
     "typescript": "~4.1.5"
   },
   "scripts": {
@@ -41,8 +47,10 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.13",
     "autoprefixer": "^9",
     "postcss": "^7",
+    "prettier": "^2.3.2",
     "tailwindcss": "yarn:@tailwindcss/postcss7-compat"
   }
 }
